feat: flexbox para las cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,47 @@
 }
 
 nav {
-    padding: 10px; 
-    grid-area: menu; 
+    padding: none;
+    color: white; 
     background: #e4c1b3; 
-    color: white;
+    grid-template-areas: menu;
 } 
 
 main {
-    grid-area: seccion-principal;
+    grid-template-areas: seccion-principal;
     padding: 10px; 
 }
-    
+
+.card {
+    display: flex; /* Activa el modelo Flexbox en el contenedor de la tarjeta */
+    flex-direction: column; /* Organiza los elementos en columnas */
+    align-items: center; /* Centra los elementos horizontalmente en el contenedor */
+    text-align: center; /* Centra el texto horizontalmente */
+    border: 1px solid #ccc; /* Agrega un borde a la tarjeta */
+    padding: 20px; /* Agrega espacio interno */
+    max-width: 300px; /* Ancho máximo de la tarjeta, ajusta según tus necesidades */
+    grid-template-columns: auto auto auto;
+}
+
+.card img {
+    max-width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
+    height: auto; /* Mantiene la proporción de aspecto de la imagen */
+}
+
+.card p {
+    margin: 10px 0; /* Espacio superior e inferior para el nombre del producto */
+}
+
+.card button {
+    background-color: #c6ccc7; /* Color de fondo del botón */
+    color: white; /* Color del texto del botón */
+    border: none; /* Elimina el borde del botón */
+    padding: 10px 20px; /* Espacio interno del botón */
+    margin-top: 10px; /* Espacio superior para el botón */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+
 footer {
     grid-area: pie-de-pagina; 
     background: #c6ccc7; 
@@ -25,9 +55,10 @@ footer {
 
 footer a {
     text-decoration: none;
+    color: white;
 }
 
-div {
+.container {
     height: 100vh;
     width: 100%;
     display: grid; 
@@ -39,7 +70,7 @@ div {
 }
 
 @media (min-width: 992px) { 
-    div{
+    .container{
     grid-template-areas: "menu seccion-principal" "menu seccion-principal" "menu pie-de-pagina";
     grid-template-columns: 6rem 1fr; 
     }
