--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,63 +1,87 @@
 * {
+    margin: 0;
+    padding: 0;
     font-family: 'Poiret One', cursive;
 }
 
-.filtros {
+.container {
+    display: grid;
+    grid-template-areas:
+       "nav"
+       "filtros"
+       "main"
+       "footer";
+    grid-template-rows: 60px/*nav*/ 60px/*filtros*/ 1fr/*principal*/ 60px/*footer*/; 
+    height: 100vh;
+    width: 100%;
+}
+
+.nav-section {
+    color: white; 
+    background: #e4c1b3; 
+    grid-area: nav;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+} 
+
+.nav-section > .logos {
+    display: flex;
+    gap: 5px;
+}
+
+.nav-section > ul {
+    display: none;
+}
+
+.logos {
+    width: 30px;
+}
+
+.filtros-section {
+    grid-area: filtros;
     background-color: #c6ccc7;
-    text-align: center; 
+    align-items: center; 
     display: flex;
     flex-direction: column;
 }
 
-@media (min-width: 576px) { 
-    .filtros {
-    flex-direction: row;
-    justify-content: space-around; 
-    }
+.filtros-section > .opcion {
+    width: 280px;
+    height: 35px;
+    padding-left: 5px;
 }
 
-nav {
-    padding: none;
-    color: white; 
-    background: #e4c1b3; 
-    grid-template-areas: menu;
+.main-section {
+    grid-area: main;
     display: flex;
     flex-direction: column;
     align-items: center;
-} 
-
-.logo {
-    margin-top: 50px;
-    cursor: pointer;
+    padding: 15px; 
+    gap: 10px;
 }
 
-main {
-    grid-template-areas: seccion-principal;
-    padding: 10px; 
-}
-
-.card {
+.main-section > .card-container > .card {
     display: flex; /* Activa el modelo Flexbox en el contenedor de la tarjeta */
     flex-direction: column; /* Organiza los elementos en columnas */
     align-items: center; /* Centra los elementos horizontalmente en el contenedor */
-    text-align: center; /* Centra el texto horizontalmente */
-    border: 1px solid #ccc; /* Agrega un borde a la tarjeta */
-    padding: 20px; /* Agrega espacio interno */
-    max-width: 300px; /* Ancho máximo de la tarjeta, ajusta según tus necesidades */
-    grid-template-columns: auto auto auto;
+    padding: 35px 0; /* Agrega espacio interno */
+    gap: 15px;
+    height: fit-content;
+    width: 220px; /* Ancho máximo de la tarjeta, ajusta según tus necesidades */
 }
 
-.card img {
-    max-width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
-    height: auto; /* Mantiene la proporción de aspecto de la imagen */
+.main-section img {
+    width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
 }
 
-.card p {
+.main-section p {
     margin: 10px 0; /* Espacio superior e inferior para el nombre del producto */
 }
 
-.card button {
-    background-color: #c6ccc7; /* Color de fondo del botón */
+.main-section > .card-container > .card > button {
+    background-color: #e4c1b3; /* Color de fondo del botón */
     color: white; /* Color del texto del botón */
     border: none; /* Elimina el borde del botón */
     padding: 10px 20px; /* Espacio interno del botón */
@@ -65,14 +89,23 @@ main {
     cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
 }
 
+.main-section > .navegador {
+    display: flex;
+}
 
-footer {
-    grid-area: pie-de-pagina; 
+.navegador > button {
+    background-color: #e4c1b3;
+    width: 30px;
+    height: 30px;
+}
+
+.footer {
+    grid-area: footer; 
     background: #c6ccc7; 
     color: white;
-    padding: 10px;
-    display: grid;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 footer a {
@@ -80,20 +113,42 @@ footer a {
     color: white;
 }
 
-.container {
-    height: 100vh;
-    width: 100%;
-    display: grid;
-    grid-template-rows: 1fr/*nav*/ 10fr/*principal*/ 1fr/*footer*/; 
-    grid-template-areas:
-       "menu"
-       "seccion-principal"
-       "pie-de-pagina";
+.footer > div {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
 }
 
-@media (min-width: 992px) { 
-    .container{
-    grid-template-areas: "menu seccion-principal" "menu seccion-principal" "menu pie-de-pagina";
-    grid-template-columns: 6rem 1fr; 
+@media (min-width: 576px) { 
+    .container {
+        grid-template-areas:
+           "nav filtros"
+           "nav main"
+           "main footer";
+        grid-template-columns: 150px 1fr;
+        grid-template-rows: 60px 1fr 60px; 
+    }
+    .main-section > .card-container {
+        flex-direction: row; 
+        flex-wrap: wrap;
+    }
+    .nav-section {
+        flex-direction: column;
+        justify-content: start;
+        gap: 35px;
+        padding: 15px;
+    }
+    .nav-section > ul {
+        list-style: none;
+    }
+    .nav-section > ul {
+        display: block;
+    }
+    .nav-section > .logos {
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-section > .logos > h1 {
+        text-align: center;
     }
 }
